--- a/index.html
+++ b/index.html
@@ -3,24 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign In</title>
+    <title>Sign In / Sign Up</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="login-container">
-      <h2>Sign In</h2>
-      <form id="loginForm">
-        <div class="input-group">
-          <label for="username">Username</label>
-          <input type="text" id="username" required />
-        </div>
-        <div class="input-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" required />
-        </div>
-        <button type="submit">Sign In</button>
-        <p id="error-message" class="error-message"></p>
-      </form>
+    <div class="container">
+      <div class="form-container">
+        <h2 id="form-title">Sign In</h2>
+        <form id="authForm">
+          <div class="input-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" required />
+          </div>
+          <div class="input-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" required />    
+          </div>
+          <div id="confirmPasswordGroup" class="input-group hidden">
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword" />
+          </div>
+          <button type="submit" id="submitButton">Sign In</button>
+          <p id="error-message" class="error-message"></p>
+        </form>
+        <p class="toggle-text">
+          Don't have an account? <a href="#" id="toggleForm">Create Account</a>
+        </p>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
