--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <input type="password" id="confirmPassword" />
           </div>
           <button type="submit" id="submitButton">Sign In</button>
+          <button id="guestLogin" class="guest-button">Continue as Guest</button>
           <p id="error-message" class="error-message"></p>
         </form>
         <p class="toggle-text">
