--- a/flights.html
+++ b/flights.html
@@ -1,317 +1,409 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Flight Booking</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-</head>
-<style>
-    
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f4f7fa;
-  margin: 0;
-  padding: 20px;
-}
-
-.booking-container {
-  max-width: 600px;
-  margin: auto;
-  background: #ffffff;
-  padding: 30px;
-  border-radius: 12px;
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
-  animation: fadeIn 1s ease-out;
-}
-
-h1 {
-  text-align: center;
-  font-size: 2rem;
-  color: #007bff;
-  margin-bottom: 20px;
-}
-
-h1 i {
-  margin-right: 10px;
-}
-
-.form-group {
-  margin-bottom: 20px;
-  position: relative;
-}
-
-label {
-  font-size: 1rem;
-  font-weight: bold;
-  display: block;
-  margin-bottom: 8px;
-  color: #333;
-}
-
-input, select, button {
-  width: 100%;
-  padding: 12px;
-  border-radius: 8px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  font-size: 1rem;
-  margin-top: 8px;
-}
-
-input[type="date"], select {
-  cursor: pointer;
-}
-
-button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-button:hover {
-  background-color: #0056b3;
-  transform: scale(1.05);
-}
-
-button i {
-  margin-right: 8px;
-}
-
-
-i {
-  position: absolute;
-  top: 12px;
-  left: 15px;
-  color: #007bff;
-}
-
-@media (max-width: 600px) {
-  .booking-container {
-    padding: 20px;
-  }
-
-  h1 {
-    font-size: 1.5rem;
-  }
-
-  .form-group {
-    margin-bottom: 15px;
-  }
-
-  button {
-    padding: 14px;
-    font-size: 1rem;
-  }
-}
-
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-
-#result {
-  margin-top: 20px;
-  font-size: 16px;
-  color: green;
-  text-align: center;
-  font-weight: bold;
-}
-
-@keyframes shake {
-  0% { transform: translateX(0); }
-  25% { transform: translateX(-10px); }
-  50% { transform: translateX(10px); }
-  75% { transform: translateX(-10px); }
-  100% { transform: translateX(0); }
-}
-
-#result {
-  margin-top: 20px;
-  font-size: 16px;
-  color: #333;
-  text-align: left;
-}
-
-.flight {
-  background-color: #f9f9f9;
-  padding: 15px;
-  margin-bottom: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-
-.flight:hover {
-  transform: scale(1.05);
-}
-
-.flight h4 {
-  margin-top: 0;
-  font-size: 1.25rem;
-  color: #007bff;
-}
-
-.flight p {
-  font-size: 1rem;
-  color: #555;
-}
-
-.flight p br {
-  margin-bottom: 5px;
-}
-
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-nav {
-  background: linear-gradient(to right, #00c6ff, #0072ff);
-  padding: 1rem 2rem;
-  text-align: center;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.nav-btn {
-  background-color: #ffffff;
-  color: #0072ff;
-  border: none;
-  padding: 0.75rem 1.5rem;
-  font-size: 1rem;
-  font-weight: bold;
-  border-radius: 30px;
-  box-shadow: 0 4px 15px rgba(0, 114, 255, 0.2);
-  cursor: pointer;
-  transition: all 0.3s ease;
-  font-family: 'Quicksand', sans-serif;
-}
-
-.nav-btn:hover {
-  background-color: #0072ff;
-  color: #fff;
-  box-shadow: 0 6px 20px rgba(0, 114, 255, 0.4);
-  transform: translateY(-2px);
-}
-
-.nav-btn i {
-  margin-right: 8px;
-}
-
-</style>
-<body>
-    <nav>
-        <button onclick="goHome()" class="nav-btn">
-          <i class="fas fa-home"></i> Home
-        </button>
-      </nav>
-  <div class="booking-container">
-    <h1><i class="fas fa-plane"></i> Book Your Flight</h1>
-    <form id="flightForm">
-      <div class="form-group">
-        <label for="from"><i class="fas fa-map-marker-alt"></i> From:</label>
-        <input type="text" id="from" required placeholder="Departure City">
-      </div>
-      <div class="form-group">
-        <label for="to"><i class="fas fa-map-marker-alt"></i> To:</label>
-        <input type="text" id="to" required placeholder="Destination City">
-      </div>
-      <div class="form-group">
-        <label for="depart"><i class="fas fa-calendar-alt"></i> Departure Date:</label>
-        <input type="date" id="depart" required>
-      </div>
-      <div class="form-group">
-        <label for="return"><i class="fas fa-calendar-alt"></i> Return Date:</label>
-        <input type="date" id="return">
-      </div>
-      <div class="form-group">
-        <label for="passengers"><i class="fas fa-users"></i> Passengers:</label>
-        <input type="number" id="passengers" min="1" value="1" required>
-      </div>
-      <div class="form-group">
-        <label for="class"><i class="fas fa-cogs"></i> Class:</label>
-        <select id="class" required>
-          <option value="">Select</option>
-          <option value="economy">Economy</option>
-          <option value="business">Business</option>
-          <option value="first">First</option>
-        </select>
-      </div>
-      <button type="submit" class="btn-submit"><i class="fas fa-search"></i> Search Flights</button>
-    </form>
-    <div id="result"></div>
-  </div>
-<script>
-    document.getElementById("flightForm").addEventListener("submit", function(e) {
-  e.preventDefault();
-
-  const from = document.getElementById("from").value.trim();
-  const to = document.getElementById("to").value.trim();
-  const depart = document.getElementById("depart").value;
-  const ret = document.getElementById("return").value;
-  const passengers = document.getElementById("passengers").value;
-  const flightClass = document.getElementById("class").value;
-
-  if (from === "" || to === "" || depart === "" || passengers === "" || flightClass === "") {
-    alert("Please fill out all required fields.");
-    return;
-  }
-
-  
-  const flights = [
-    { name: "IndiGo", price: "₹5000", time: "10:00 AM", duration: "5h", class: flightClass },
-    { name: "Air India", price: "₹4500", time: "2:00 PM", duration: "6h", class: flightClass },
-    { name: "SpiceJet", price: "₹6000", time: "6:00 AM", duration: "4h", class: flightClass },
-    { name: "Akasa Air", price: "₹5500", time: "8:00 PM", duration: "5.5h", class: flightClass },
-  ];
-
-  
-  const resultDiv = document.getElementById("result");
-  resultDiv.innerHTML = ""; 
-
-  const title = document.createElement("h3");
-  title.textContent = `Available Flights from ${from} to ${to} on ${depart}`;
-  resultDiv.appendChild(title);
-
-  
-  flights.forEach(flight => {
-    const flightDiv = document.createElement("div");
-    flightDiv.classList.add("flight");
-
-    const flightName = document.createElement("h4");
-    flightName.textContent = flight.name;
-    flightDiv.appendChild(flightName);
-
-    const flightDetails = document.createElement("p");
-    flightDetails.innerHTML = `Price: ${flight.price}<br>Departure Time: ${flight.time}<br>Duration: ${flight.duration}<br>Class: ${flight.class}`;
-    flightDiv.appendChild(flightDetails);
-
-    resultDiv.appendChild(flightDiv);
-  });
-
-  resultDiv.style.animation = "fadeIn 1s ease-out";
-});
-function goHome() {
-      window.location.href = "./homepage.html";
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Flight Booking</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <style>
+    body {
+      font-family: "Arial", sans-serif;
+      background-color: #f4f7fa;
+      margin: 0;
+      padding: 20px;
     }
 
-  
-  </script>
-</body>
+    .booking-container {
+      max-width: 600px;
+      margin: auto;
+      background: #ffffff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+      animation: fadeIn 1s ease-out;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      color: #007bff;
+      margin-bottom: 20px;
+    }
+
+    h1 i {
+      margin-right: 10px;
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+      position: relative;
+    }
+
+    label {
+      font-size: 1rem;
+      font-weight: bold;
+      display: block;
+      margin-bottom: 8px;
+      color: #333;
+    }
+
+    input,
+    select,
+    button {
+      width: 100%;
+      padding: 12px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      font-size: 1rem;
+      margin-top: 8px;
+    }
+
+    input[type="date"],
+    select {
+      cursor: pointer;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
+    }
+
+    button i {
+      margin-right: 8px;
+    }
+
+    i {
+      position: absolute;
+      top: 12px;
+      left: 15px;
+      color: #007bff;
+    }
+
+    @media (max-width: 600px) {
+      .booking-container {
+        padding: 20px;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      .form-group {
+        margin-bottom: 15px;
+      }
+
+      button {
+        padding: 14px;
+        font-size: 1rem;
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+
+    #result {
+      margin-top: 20px;
+      font-size: 16px;
+      color: green;
+      text-align: center;
+      font-weight: bold;
+    }
+
+    @keyframes shake {
+      0% {
+        transform: translateX(0);
+      }
+      25% {
+        transform: translateX(-10px);
+      }
+      50% {
+        transform: translateX(10px);
+      }
+      75% {
+        transform: translateX(-10px);
+      }
+      100% {
+        transform: translateX(0);
+      }
+    }
+
+    #result {
+      margin-top: 20px;
+      font-size: 16px;
+      color: #333;
+      text-align: left;
+    }
+
+    .flight {
+      background-color: #f9f9f9;
+      padding: 15px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .flight:hover {
+      transform: scale(1.05);
+    }
+
+    .flight h4 {
+      margin-top: 0;
+      font-size: 1.25rem;
+      color: #007bff;
+    }
+
+    .flight p {
+      font-size: 1rem;
+      color: #555;
+    }
+
+    .flight p br {
+      margin-bottom: 5px;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+    nav {
+      background: linear-gradient(to right, #00c6ff, #0072ff);
+      padding: 1rem 2rem;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .nav-btn {
+      background-color: #ffffff;
+      color: #0072ff;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      font-weight: bold;
+      border-radius: 30px;
+      box-shadow: 0 4px 15px rgba(0, 114, 255, 0.2);
+      cursor: pointer;
+      transition: all 0.3s ease;
+      font-family: "Quicksand", sans-serif;
+    }
+
+    .nav-btn:hover {
+      background-color: #0072ff;
+      color: #fff;
+      box-shadow: 0 6px 20px rgba(0, 114, 255, 0.4);
+      transform: translateY(-2px);
+    }
+
+    .nav-btn i {
+      margin-right: 8px;
+    }
+    .links {
+      position: sticky;
+      top: 70px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 40px;
+      align-content: center;
+      justify-content: center;
+      padding: 20px;
+      list-style: none;
+      font-size: 20px;
+      background: white;
+      z-index: 999;
+      animation: slideDown 0.7s ease-out;
+    }
+    @keyframes slideDown {
+      0% {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    .links li a {
+      display: inline-block; /* Add this */
+      text-decoration: none;
+      color: rgb(145, 13, 13);
+      transition: transform 0.5s ease, color 0.3s ease;
+    }
+    .links li a:hover {
+      transform: scale(1.2);
+      color: #0077cc;
+    }
+
+    .links a {
+      text-decoration: none;
+    }
+  </style>
+  <body>
+    <nav>
+      <button onclick="goHome()" class="nav-btn">
+        <i class="fas fa-home"></i> Home
+      </button>
+    </nav>
+    <div id="header"></div>
+
+    <div class="booking-container">
+      <h1><i class="fas fa-plane"></i> Book Your Flight</h1>
+      <form id="flightForm">
+        <div class="form-group">
+          <label for="from"><i class="fas fa-map-marker-alt"></i> From:</label>
+          <input type="text" id="from" required placeholder="Departure City" />
+        </div>
+        <div class="form-group">
+          <label for="to"><i class="fas fa-map-marker-alt"></i> To:</label>
+          <input type="text" id="to" required placeholder="Destination City" />
+        </div>
+        <div class="form-group">
+          <label for="depart"
+            ><i class="fas fa-calendar-alt"></i> Departure Date:</label
+          >
+          <input type="date" id="depart" required />
+        </div>
+        <div class="form-group">
+          <label for="return"
+            ><i class="fas fa-calendar-alt"></i> Return Date:</label
+          >
+          <input type="date" id="return" />
+        </div>
+        <div class="form-group">
+          <label for="passengers"
+            ><i class="fas fa-users"></i> Passengers:</label
+          >
+          <input type="number" id="passengers" min="1" value="1" required />
+        </div>
+        <div class="form-group">
+          <label for="class"><i class="fas fa-cogs"></i> Class:</label>
+          <select id="class" required>
+            <option value="">Select</option>
+            <option value="economy">Economy</option>
+            <option value="business">Business</option>
+            <option value="first">First</option>
+          </select>
+        </div>
+        <button type="submit" class="btn-submit">
+          <i class="fas fa-search"></i> Search Flights
+        </button>
+      </form>
+      <div id="result"></div>
+    </div>
+    <script>
+      document
+        .getElementById("flightForm")
+        .addEventListener("submit", function (e) {
+          e.preventDefault();
+
+          const from = document.getElementById("from").value.trim();
+          const to = document.getElementById("to").value.trim();
+          const depart = document.getElementById("depart").value;
+          const ret = document.getElementById("return").value;
+          const passengers = document.getElementById("passengers").value;
+          const flightClass = document.getElementById("class").value;
+
+          if (
+            from === "" ||
+            to === "" ||
+            depart === "" ||
+            passengers === "" ||
+            flightClass === ""
+          ) {
+            alert("Please fill out all required fields.");
+            return;
+          }
+
+          const flights = [
+            {
+              name: "IndiGo",
+              price: "₹5000",
+              time: "10:00 AM",
+              duration: "5h",
+              class: flightClass,
+            },
+            {
+              name: "Air India",
+              price: "₹4500",
+              time: "2:00 PM",
+              duration: "6h",
+              class: flightClass,
+            },
+            {
+              name: "SpiceJet",
+              price: "₹6000",
+              time: "6:00 AM",
+              duration: "4h",
+              class: flightClass,
+            },
+            {
+              name: "Akasa Air",
+              price: "₹5500",
+              time: "8:00 PM",
+              duration: "5.5h",
+              class: flightClass,
+            },
+          ];
+
+          const resultDiv = document.getElementById("result");
+          resultDiv.innerHTML = "";
+
+          const title = document.createElement("h3");
+          title.textContent = `Available Flights from ${from} to ${to} on ${depart}`;
+          resultDiv.appendChild(title);
+
+          flights.forEach((flight) => {
+            const flightDiv = document.createElement("div");
+            flightDiv.classList.add("flight");
+
+            const flightName = document.createElement("h4");
+            flightName.textContent = flight.name;
+            flightDiv.appendChild(flightName);
+
+            const flightDetails = document.createElement("p");
+            flightDetails.innerHTML = `Price: ${flight.price}<br>Departure Time: ${flight.time}<br>Duration: ${flight.duration}<br>Class: ${flight.class}`;
+            flightDiv.appendChild(flightDetails);
+
+            resultDiv.appendChild(flightDiv);
+          });
+
+          resultDiv.style.animation = "fadeIn 1s ease-out";
+        });
+      function goHome() {
+        window.location.href = "./homepage.html";
+      }
+      fetch("header.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("header").innerHTML = data;
+        });
+    </script>
+  </body>
 </html>
