--- a/homepage.html
+++ b/homepage.html
@@ -354,7 +354,6 @@
       padding: 15px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 
-    
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -397,23 +396,19 @@
       background-color: #0056b3;
     }
 
-
     .product-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 8px;
-  
-  
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
-}
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
 
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+    }
 
-.product-image:hover {
-  transform: scale(1.05); 
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
-}
-
+    .product-image:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    }
   </style>
 
   <body>
@@ -431,7 +426,6 @@
           <button class="cart-btn">
             🛒Cart(<span id="cart-count">0</span>)
           </button>
-          
         </li>
         <li><button class="sign-in-btn">Log Out</button></li>
       </ul>
@@ -765,8 +759,8 @@
           <h3>Quick Links</h3>
           <ul>
             <li><a href="./hotel.html">Hotels</a></li>
-            <li><a href="#">Restaurants</a></li>
-            <li><a href="#">Flights</a></li>
+            <li><a href="./Restaurants.html">Restaurants</a></li>
+            <li><a href="./flights.html">Flights</a></li>
             <li><a href="#">Reviews</a></li>
           </ul>
         </div>
