changes are done

--- a/homepage.html
+++ b/homepage.html
@@ -15,9 +15,8 @@
       padding: 15px 20px;
       background: #333;
       color: white;
-      z-index: 1000; /* to stay above other elements */
+      z-index: 1000;
     }
-
     .logo {
       font-size: 24px;
       font-weight: bold;
@@ -415,14 +414,7 @@
     <nav class="navbar">
       <div class="logo">TRIPADVISOR</div>
       <ul class="nav-links">
-        <!-- <li><a href="#">Discover</a></li>
-        <li><a href="#">trips</a></li>
-        <li><a href="#">Review</a></li>
-        <li><a href="#">More</a></li> -->
         <li>
-          <!-- <button class="cart-btn">
-            Cart (<span id="cart-count">0</span>)
-          </button> -->
           <button class="cart-btn">
             🛒Cart(<span id="cart-count">0</span>)
           </button>
