--- a/hotel.html
+++ b/hotel.html
@@ -51,8 +51,13 @@
       width: 100%;
       height: 200px;
       border-radius: 8px;
+      transition: transform 0.5s ease, box-shadow 0.5s ease;
     }
 
+    .room-card img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
     .room-card button {
       background-color: #3498db;
       color: white;
