--- a/Restaurants.html
+++ b/Restaurants.html
@@ -137,6 +137,27 @@
       .links a {
         text-decoration: none;
       }
+      .card img {
+        opacity: 0;
+        transform: scale(0.95);
+        animation: fadeInScale 1s ease-in-out forwards;
+        transition: transform 0.4s ease, box-shadow 0.4s ease, filter 0.4s ease;
+        border-radius: 8px;
+      }
+
+      @keyframes fadeInScale {
+        to {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
+
+      .card img:hover {
+        transform: scale(1.05);
+        transition: transform 0.3s ease;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+        filter: brightness(1.1) contrast(1.05);
+      }
     </style>
   </head>
   <body>
