alerts are updated

--- a/homepage.html
+++ b/homepage.html
@@ -453,7 +453,7 @@
           alt="Product 1"
           class="product-image"
         />
-        <h4>charminar</h4>
+        <h4>Charminar</h4>
         <p class="product-description">
           Charminar is renowned as a symbol of Hyderabad and the Qutb Shahi
           dynasty, marking the founding of the city and known for its intricate
@@ -476,7 +476,7 @@
           alt="Product 2"
           class="product-image"
         />
-        <h4>golconda</h4>
+        <h4>Golconda</h4>
         <p class="product-description">
           Golconda is a fortified citadel and ruined city located on the western
           outskirts of Hyderabad, Telangana, India. The fort was originally
@@ -500,7 +500,7 @@
           alt="Product 3"
           class="product-image"
         />
-        <h4>ramoji filmcity</h4>
+        <h4>Ramoji filmcity</h4>
         <p class="product-description">
           Ramoji Film City Spanning over 2000 acres, it stands as a unique
           thematic tourism destination and is recognised by Guinness World
@@ -525,7 +525,7 @@
           alt="Product 4"
           class="product-image"
         />
-        <h4>jagannath temple</h4>
+        <h4>Jagannath temple</h4>
         <p class="product-description">
           The Jagannath Temple in Hyderabad, India, Telangana, is a modern
           temple built by the Odia community of the city of Hyderabad dedicated
@@ -549,7 +549,7 @@
           alt="Product 5"
           class="product-image"
         />
-        <h4>hussain sagar</h4>
+        <h4>Hussain sagar</h4>
         <p class="product-description">
           Hussain Sagar is a heart-shaped lake in Hyderabad, Telangana, India,
           built by Ibrahim Quli Qutb Shah in 1562. It is spread across an area
@@ -573,7 +573,7 @@
           alt="Product 6"
           class="product-image"
         />
-        <h4>ammapalli temple</h4>
+        <h4>Ammapalli temple</h4>
         <p class="product-description">
           The ammapalli temple is known for its intricate carvings and
           sculptures, which are a blend of South Indian and North Indian
@@ -597,7 +597,7 @@
           alt="Product 7"
           class="product-image"
         />
-        <h4>sanghi temple</h4>
+        <h4>Sanghi temple</h4>
         <p class="product-description">
           Sanghi Temple, which is said to be the replica of Tirumala temple is
           located at Sanghi Nagar in Telangana in India, is about 35 km from
@@ -620,7 +620,7 @@
           alt="Product 8"
           class="product-image"
         />
-        <h4>yadhagiri gutta</h4>
+        <h4>Yadhagiri gutta</h4>
         <p class="product-description">
           Sri Lakshmi Narasimha Swamy Temple Yadadri is the most famous temple
           of Telangana. It is glorified as the Pancha Narasimha Kshetra and the
@@ -644,7 +644,7 @@
           alt="Product 9"
           class="product-image"
         />
-        <h4>swarnagiri</h4>
+        <h4>Swarnagiri</h4>
         <p class="product-description">
           Swarnagiri Temple is a Hindu temple dedicated to Lord Venkateswara,
           located in Bhuvanagiri district, Telangana, India.
@@ -665,7 +665,7 @@
           alt="Product 10"
           class="product-image"
         />
-        <h4>badrinath temple</h4>
+        <h4>Badrinath temple</h4>
         <p class="product-description">
           In Hyderabad, there's a Badrinath temple, a replica of the original in
           Uttarakhand, located in the village of Bandamailaram, Medchal
@@ -688,7 +688,7 @@
           alt="Product 11"
           class="product-image"
         />
-        <h4>nehru park</h4>
+        <h4>Nehru park</h4>
         <p class="product-description">
           Nehru Zoological Park is a zoo located near Mir Alam Tank in
           Bahadurpura, Telangana, India. It is one of the most visited
@@ -710,7 +710,7 @@
           alt="Product 12"
           class="product-image"
         />
-        <h4>lumbini park</h4>
+        <h4>Lumbini park</h4>
         <p class="product-description">
           Lumbini Park, officially T. Anjaiah Lumbini Park, is a small public,
           urban park of 3 hectares adjacent to Hussain Sagar in Hyderabad,
@@ -808,6 +808,8 @@
           cartItem.innerHTML = `${productName} - ₹${productPrice} <button class='remove-btn'>Delete</button>`;
 
           cartItemsList.appendChild(cartItem);
+          alert("Item added to cart..!");
+
           cartItems.push(cartItem);
           cartCount++;
 
