--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form id="authForm">
           <div class="input-group">
             <label for="username">Username</label>
-            <input type="text" id="username" required placeholder="Enter your name or email.... " />
+            <input type="text" id="username" autocomplete="off" required placeholder="Enter your name or email.... " />
           </div>
           <div class="input-group">
             <label for="password">Password</label>
